minor bugs fixes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="side-bar-content">
                     <!-- spotify logo -->
                     <div class="spotify-logo">
-                        <a href="https://open.spotify.com/">
+                        <a href="">
                             <img
                                 src="./Icons/Spotify logo.png"
                                 alt="Spotify logo"
@@ -104,10 +104,10 @@
                     </div>
                     <div class="main-profile">
                         <img
-                            src="Icons\imgs\profile.jpg"
+                            src="Icons\imgs\myprofile.png"
                             alt="profile picture"
                         />
-                        <p>Dharmendra</p>
+                        <p>Ashish</p>
                         <i
                             class="fa-solid fa-caret-down"
                             style="color: #ffffff"
